2004-09-27 Magnus Hagdorn
 * glimmer_temp.f90: applied Tony's fix for floating ice temperature problem
   see http://forge.nesc.ac.uk/pipermail/glimmer-discuss/2004-September/000041.html
	
2004-09-27 Magnus Hagdorn
 * split up main time step into two parts so that we can write data before
   ice thicknesses are updated (glint_timestep.f90, glide_types.f90, simple_glide.f90, eis_glide.f90, glint_timestep.f90)
 * updated doc (glide.dia, glide.eps)
	
2004-09-22 Magnus Hagdorn
 * new continentality calculations (eis_cony.f90, glimmer_searchcircle.f90, eis_forcing.f90
 * eis_ela.f90: distinguish between maritime and continental mass balance
 * eis specific netCDF I/O (eis_io.f90.in, eis_glide.f90, ncdf_vars.def)
 * eis_types.f90: split out type definition to avoid circular dependency
 * Makefile: updated accordingly
	
2004-09-21 Magnus Hagdorn
 * add eus to lower ice boundary calculations (glide_setup.f90, glide.f90, glint_initialise.f90, glint_timestep.f90)
 * glide_mask.f90: eustatic sea level change is considered when calculating mask
 * use glide_mask for finding ice shelf (glide_types.f90, glimmer_temp.f90)
 * glimmer_velo.f90: minor rearrangements which might speed-up code

2004-09-21 Magnus Hagdorn
 * glint_io.f90.in: fix scaling bug of netCDF variables
 * Makefile: added glide_mask.o to test_setup

2004-09-20 Magnus Hagdorn
 * generate_ncvars.py: need to set NF90_FILL_REAL to 0 when reading netCDF files.
	
2004-09-10 Magnus Hagdorn
 * data_dep.dot: removed initialisation from graph and moved bedrock adjustment and surface calcs to end of 
   time step
 * data_dep-legend.fig: legend for data dependency plot
 * glide.tex: updated documentation for new calving code
 * glide.f90: moved upper and lower ice surface and bed rock adjustment calculations to end of time step
 * glide_setup.f90: new calving mode uses glide_mask to find floating ice. this routine is a bit of a hack 
   at the moment.
 * glide_types.f90: moved marine margin options around