@@ -129,7 +129,6 @@ units:         meter2/year
 long_name:     flux in x direction
 data:          model%velocity%uflx(1:ewnv,1:nsnv)
 factor:        scale2d_f2
-mask:          1
 
 [vflx]
 dimensions:    time, y0, x0
@@ -137,7 +136,6 @@ units:         meter2/year
 long_name:     flux in x direction
 data:          model%velocity%vflx(1:ewnv,1:nsnv)
 factor:        scale2d_f2
-mask:          1
 
 [diffu]
 dimensions:    time, y0, x0
@@ -145,7 +143,6 @@ units:         meter2/year
 long_name:     apparent diffusivity
 data:          model%velocity%diffu(1:ewnv,1:nsnv)
 factor:        scale2d_f4
-mask:          1
 
 [btrc]
 dimensions:    time, y0, x0
@@ -153,7 +150,6 @@ units:         meter/pascal/year
 long_name:     basal slip coefficient
 data:          model%velocity%btrc(1:ewnv,1:nsnv)
 factor:        scale2d_f6
-mask:          1
 
 [ubas]
 dimensions:    time, y0, x0
@@ -162,7 +158,6 @@ long_name:     basal slip velocity in x direction
 data:          model%velocity%ubas(1:ewnv,1:nsnv)
 factor:        scale2d_f5
 standard_name: land_ice_basal_x_velocity
-mask:          1
 
 [vbas]
 dimensions:    time, y0, x0
@@ -171,7 +166,6 @@ long_name:     basal slip velocity in y direction
 data:          model%velocity%vbas(1:ewnv,1:nsnv)
 factor:        scale2d_f5
 standard_name: land_ice_basal_y_velocity
-mask:          1
 
 [thk]
 dimensions:    time, y1, x1
@@ -181,7 +175,6 @@ data:          model%geometry%thck
 factor:        thk0
 standard_name: land_ice_thickness
 hot:           1
-mask:          1
 
 [thkmask]
 dimensions:    time, y1, x1
@@ -238,7 +231,6 @@ data:          model%temper%bmlt
 factor:        scale2d_f1
 standard_name: land_ice_basal_melt_rate
 hot:           1
-mask:          1
 
 [bwat]
 dimensions:    time, y1, x1
@@ -247,7 +239,6 @@ long_name:     basal water depth
 data:          model%temper%bwat
 factor:        thk0
 hot:           1
-mask:          1
 
 [artm]
 dimensions:    time, y1, x1
@@ -262,7 +253,6 @@ dimensions:    time, y1, x1
 units:         degree_Celcius
 long_name:     basal ice temperature
 data:          model%temper%temp(model%general%upn,1:model%general%ewn,1:model%general%nsn)
-mask:          1
 
 [arng]
 dimensions:    time, y1, x1
@@ -294,7 +284,6 @@ units:         meter/year
 long_name:     rate of upper ice surface elevation change
 data:          model%geomderv%dusrfdtm
 factor:        scale2d_f1
-mask:          1
 
 [uvel]
 dimensions:    time, level, y0, x0
@@ -303,7 +292,6 @@ long_name:     ice velocity in x direction
 data:          model%velocity%uvel(up,1:ewnv,1:nsnv)
 factor:        scale3d_f1
 standard_name: land_ice_x_velocity
-mask:          1
 
 [vvel]
 dimensions:    time, level, y0, x0
@@ -312,7 +300,6 @@ long_name:     ice velocity in y direction
 data:          model%velocity%vvel(up,1:ewnv,1:nsnv)
 factor:        scale3d_f1
 standard_name: land_ice_y_velocity
-mask:          1
 
 [wvel]
 dimensions:    time, level, y1, x1
@@ -321,7 +308,6 @@ long_name:     vertical ice velocity
 data:          model%velocity%wvel(up,:,:)
 factor:        scale3d_f7
 standard_name: land_ice_z_velocity
-mask:          1
 
 [wgrd]
 dimensions:    time, level, y1, x1
@@ -329,7 +315,6 @@ units:         meter/year
 long_name:     ?? some velo ??
 data:          model%velocity%wgrd(up,:,:)
 factor:        scale3d_f7
-mask:          1
 
 [flwa]
 dimensions:    time, level, y1, x1
@@ -338,7 +323,6 @@ long_name:     Pre-exponential flow law parameter
 data:          model%temper%flwa(up,:,:)
 factor:        scale3d_f8
 hot:           1
-mask:          1
 
 [temp]
 dimensions:    time, level, y1, x1
@@ -347,7 +331,6 @@ long_name:     ice temperature
 data:          model%temper%temp(up,1:model%general%ewn,1:model%general%nsn)
 standard_name: land_ice_temperature
 hot:           1
-mask:          1
 
 [ela]
 dimensions:    time, y1, x1
